--- a/css/style.css
+++ b/css/style.css
@@ -6,8 +6,14 @@
 }
 
 body{
-    background-image: linear-gradient(rgb(223, 136, 136), purple);
+    background-image: url("../img/bg.png");
+    background-size: cover;
     height: 100vh;
+}
+h1{
+    margin: 8px;
+    text-align: center;
+    color: #03d4be;
 }
 
 .container{
@@ -17,13 +23,13 @@ body{
     margin: auto;
     padding: 33px;
     overflow-y: auto;
-    margin-bottom: 23px;
+    margin-bottom: 9px;
 }
 
 .message{
     border: 2px solid black;
     width: 250px;
-    background-color: gray;
+    background-color: #e5e5e5;
     margin: 9px 3px;
     height: 35px;
     border-radius: 5px;
@@ -48,7 +54,7 @@ body{
 }
 
 #messageinp{
-    width: 50%;
+    width: 56%;
     height: 28px;
     border: 2px solid black;
     border-radius: 4px;
@@ -58,4 +64,18 @@ body{
     width: 50px;
     border-radius: 4px;
     height: 33px;
+}
+
+@media only screen and (max-width: 600px) {
+    .logo{
+        height: 40px;
+    }
+
+    h1{
+        font-size: 24px;
+    }
+
+    #messageinp {
+    width: 71%;
+    }
 }
